--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.3.2
+  hooks_riverpod: ^2.3.2
+  flutter_hooks: ^0.18.6
 
 dev_dependencies:
   flutter_test:
