--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.3.2
   hooks_riverpod: ^2.3.2
   flutter_hooks: ^0.18.6
+  cloud_firestore: ^4.4.3
+  firebase_core: ^2.7.0
 
 dev_dependencies:
   flutter_test:
